style.css
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --uri-lg-fsz: max(27px, calc(2vw + 4px));
  --uri-avg-fsz: max(16px, calc(0.5vw + 14px));
  --uri-sm-fsz: max(14px, calc(0.5vw + 8px));
  --uri-black: #000;
  --uri-white: #fff;
  --uri-gray: #12121eaa;
  --uri-dk-blue: #011642;
  --uri-dk-trans: #00000034;
}

body {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

header {
  background: var(--uri-gray);
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 3rem;
  padding: 2rem;
  font-family: 'outfit', 'sora', sans-serif;
  height: 100vh;
}

header * {
  z-index: 2;
}

h1 {
  font-size: var(--uri-lg-fsz) !important;
}

.hero-img {
  width: 30%;
  z-index: 2;
  border: 5px solid var(--uri-gray);
  border-radius: 50%;
  box-shadow: 8px 8px 12px var(--uri-black);
  padding: 1rem;
}

.about-me {
  background-color: var(--uri-white);
  padding: 1rem;
  box-shadow: 3px 3px 5px var(--uri-gray);
  position: sticky;
  top: 0.5rem;
  border-radius: 1rem;
  display: flex;
  flex-direction: column;
  row-gap: 1rem;
}

.about-me>p {
  font-size: var(--uri-avg-fsz);
  margin-top: 8px;
}

.about-me .icon {
  align-self: flex-end;
}

main {
  position: relative;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  row-gap: 1.5rem;
  font-family: 'outfit', 'sora', sans-serif;
}

main>h1 {
  align-self: flex-start;
  padding: 1rem;
  z-index: 3;
  background-color: var(--uri-white);
  position: sticky;
  top: 0.5rem;
  border-radius: 5px;
}

.my-projects {
  display: grid;
  grid-template: repeat(2, max(480px, 35vh)) / repeat(3, 1fr);
  gap: 3rem;
  width: 100%;
  justify-items: center;
  align-content: center;
  z-index: 2;
}

.my-projects>div {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  padding: 1rem;
  box-shadow: 2px 2px 4px var(--uri-gray);
  transition: transform 0.3s linear;
}

.my-projects>div>img {
  width: 100%;
  max-height: 480px;
}

.my-projects>div>section {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.title {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.title * {
  font-size: var(--uri-avg-fsz);
}

.description {
  font-size: var(--uri-sm-fsz);
  padding: 0 1rem;
  text-align: center;
}

.view-icon {
  display: flex;
  column-gap: 1rem;
}

.icon-link {
  text-decoration: none;
  color: var(--uri-black);
  transition: transform 0.3s linear;
}

.icon-link:hover {
  transform: scale(1.2);
  color: var(--uri-dk-blue);
}

.icon-link:active {
  background-color: var(--uri-gray);
  color: var(--uri-white);
}

.icon-link:visited {
  color: var(--uri-gray);
}

footer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--uri-dk-trans);
  padding: 0 2rem;
  position: relative;
  font-family: 'outfit', 'sora', sans-serif;
  background: linear-gradient(-45deg,
      var(--uri-gray),
      var(--uri-white),
      var(--uri-white));
}

.footer-img {
  width: 35%;
  border: 8px solid var(--uri-dk-trans);
  border-radius: 50%;
  box-shadow: 8px 8px 12px var(--uri-black);
}

footer li {
  list-style: none;
}

footer>p {
  position: absolute;
  bottom: 8px;
  font-size: var(--uri-avg-fsz);
  font-weight: 700;
}

.collab {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.collab * {
  font-size: var(--uri-avg-fsz);
}

address {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.contact {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.icon {
  display: flex;
  gap: 0.5rem;
}

/* Some minute responsiveness */

@media screen and (min-width: 1024px) {
  .about-me {
    max-width: 1500px;
  }
  
  header::before {
    content: " ";
    width: 200px;
    height: 140vh;
    position: absolute;
    background-color: var(--uri-white);
    top: 0;
    left: 0;
    z-index: 1;
    transform: rotate(-20deg);
    transform-origin: 0% 0%;
  }
  
  .hero-img {
    max-width: 1000px;
  }
  
  .my-projects>div {
    max-width: 1000px;
  }
  
  .my-projects>div:hover {
    transform: scale(1.1);
  }
}

@media screen and (min-width: 641px) and (max-width: 1023px) {
  header::before {
    content: " ";
    width: 200px;
    height: 120vh;
    position: absolute;
    background-color: var(--uri-white);
    top: -10vh;
    left: 0;
    z-index: 1;
    transform: rotate(-10deg);
  }
  
  .my-projects {
    grid-template: repeat(3, max(480px, 35vh)) / repeat(2, 1fr);
    z-index: 2;
  }
  
  .my-projects>div:hover {
    transform: scale(1.1);
  }
}

@media screen and (orientation: landscape) and (max-height: 600px) {
  header::before {
    content: " ";
    width: 100px;
    height: 120vh;
    position: absolute;
    background-color: var(--uri-white);
    top: -10vh;
    left: 60px;
    z-index: 1;
    transform: rotate(-25deg);
  }
  
  .about-me {
    position: relative;
  }
  
  main>h1 {
    position: relative;
    border: none;
    background-color: inherit;
    border-radius: 0%;
    top: 0;
  }
  
  .my-projects {
    grid-template: repeat(2, max(300px, 50vh)) / repeat(3, 1fr);
    row-gap: 2rem;
  }
  
  .my-projects>div:hover {
    transform: scale(1.1);
  }
  
  footer {
    padding: 3rem 2rem;
  }
  
  .footer-img {
    width: 25%;
  }
  
  .collab,
  .footer-img {
    margin-bottom: 2rem;
  }
}

